--- a/app/views/receipts/new.html.erb
+++ b/app/views/receipts/new.html.erb
@@ -1,3 +1,3 @@
 <h1>Add a new receipt</h1>
 
-<%= render 'form', receipt: @receipt, user: @user, action: :new %>
+<%= render 'form', receipt: @receipt, action: :new %>
