--- a/app/views/receipts/index.html.erb
+++ b/app/views/receipts/index.html.erb
@@ -1,16 +1,21 @@
 <h1>Receipts</h1>
 
-<% @receipts.each do |receipt| %>
-  <%= link_to 'View receipt', user_receipt_url(id: receipt.id, user_id: @user.id) %>
-  <ul>
-    <label for="name">Name</label>
-    <li id="name"><%= receipt.name %></li>
-    <label for="date">Date</label>
-    <li id="date"><%= receipt.date %></li>
-    <label for="total">Total</label>
-    <li id="total"><%= receipt.total %></li>
-    <label for="note">Note</label>
-    <li id="note"><%= receipt.note%></li>
-  </ul>
-  <br>
+<% if !@receipts.empty? %>
+  <% @receipts.each do |receipt| %>
+    <%= link_to 'View receipt', user_receipt_url(id: receipt.id, user_id: @user.id) %>
+    <ul>
+      <label for="name">Name</label>
+      <li id="name"><%= receipt.name %></li>
+      <label for="date">Date</label>
+      <li id="date"><%= receipt.date %></li>
+      <label for="total">Total</label>
+      <li id="total"><%= receipt.total %></li>
+      <label for="note">Note</label>
+      <li id="note"><%= receipt.note %></li>
+    </ul>
+    <br>
+  <% end %>
+<% else %>
+  <p>You do not have any receipts.</p>
+  <%= link_to 'Add a receipt', new_receipt_url %>
 <% end %>
