Nest friend_requests resources within users

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,11 @@
 <h1>Profile</h1>
 
+<h2>Groups</h2>
+<%# Could display first three groups, then offer a button to link to the groups index page (if user has more than three groups) %>
+<%# Links to join or create groups %>
+
 <h2>Friends</h2>
 <%# Display friends list %>
 <%# Link to send a friend request %>
 
-<h2>Groups</h2>
-<%# Could display first three groups, then offer a button to link to the groups index page (if user has more than three groups) %>
-<%# Links to join or create groups %>
+<h2>Friend Requests</h2>
