--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,3 +9,22 @@
 <%# Link to send a friend request %>
 
 <h2>Friend Requests</h2>
+<h3>Sent requests</h3>
+<ul>
+  <% @user.friend_requests.each do |fr| %>
+    <% if fr.requester_id == @user.id %>
+      <% requestee = User.find_by(id: fr.requestee_id) %>
+      <li><%= requestee.name %> <%= link_to "(Profile)", user_url(requestee) %></li>
+    <% end %>
+  <% end %>
+</ul>
+
+<h3>Your requests</h3>
+<ul>
+  <% @user.friend_requests.each do |fr| %>
+    <% if fr.requestee_id == @user.id %>
+      <% requester = User.find_by(id: fr.requester_id) %>
+      <li><%= requester.name %> <%= link_to "(Profile)", user_url(requester) %></li>
+    <% end %>
+  <% end %>
+</ul>
