--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,6 +12,7 @@
 </ul>
 <%# Could display first three groups, then offer a button to link to the groups index page (if user has more than three groups) %>
 <%# Links to join or create groups %>
+<%= link_to 'Create/join group', groups_url %>
 
 <h2>Friends</h2>
 <ul>
