--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -5,7 +5,7 @@
 
 <% if !@groups.empty? %>
   <% @groups.each do |group| %>
-    <%= link_to group.name, user_group_url(id: group.id, user_id: @user.id) %>
+    <%= link_to group.name, group_url(group) %>
   <% end %>
 <% else %>
   <p>You are not a member of any groups yet.</p>
