--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,7 +13,7 @@
   <input type="text" name="user[name]" id="name">
 
   <label for="password">Password</label>
-  <input type="text" name="user[password_digest]" id="password">
+  <input type="password" name="user[password_digest]" id="password">
 
   <input type="submit" value="Create Account">
 
