--- a/app/views/receipts/index.html.erb
+++ b/app/views/receipts/index.html.erb
@@ -19,4 +19,4 @@
   <p>You do not have any receipts.</p>
 <% end %>
 
-<%= link_to 'Add a receipt', new_receipt_url %>
+<%= link_to 'Add a receipt', new_user_receipt_url(@user) %>
