--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -4,11 +4,15 @@
 <br>
 <br>
 
-<% @group.receipts.each do |receipt| %>
-  <%= receipt.total %>
-  <%= link_to receipt.name, group_receipt_url(id: receipt.id, group_id: @group.id) %>
-  <br>
-<% end %>
+<ul>
+  <% @group.receipts.each do |receipt| %>
+    <li>
+      <%= receipt.total %>
+      <%= link_to receipt.name, group_receipt_url(id: receipt.id, group_id: @group.id) %>
+      Submitted by: <%= User.find_by(id: receipt.user_id).name %>
+    </li>
+  <% end %>
+</ul>
 
 <br>
 
@@ -20,22 +24,16 @@
   </div>
 <% end %>
 
-<p>You may change the percentage splits as you would like and click the button below to recalculate</p> 
 <form action="<%= group_url(@group) %>" method="get">
   <ul>
     <% @members.each do |member| %>
       <li>
-        <input 
-          type="number" 
-          step="any"
-          name="group[custom_percentages][<%= member.id %>]" 
-          value="<%= @individual_totals[member.id.to_s][0] %>">
         <%= member.name %>
-        Total: <%= @individual_totals[member.id.to_s][1] %>
+        Amount contributed: <%= member.total_for_group(@group.id) %>
       </li>
     <% end %>
   </ul>
-  <input type="submit" value="Recalculate">
+  <input type="submit" value="Calculate even split">
 </form>
 
 <%= link_to 'Add a new receipt to this group', new_user_receipt_url(@user) %>
