--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,13 +21,14 @@
 <%# Links to join or create groups %>
 <% if @user == current_user %>
   <%= link_to 'Create a group', new_group_url %><br>
-  <%= link_to 'Join an existing group', groups_url %>
+  <%# link_to 'Join an existing group', groups_url %>
 <% end %>
 
 <h2>Friends</h2>
 <ul>
-  <% @user.friends.each do |friend| %>
-    <% friendship = Friendship.find_by(friend_id: friend.id)%>
+  <% @friendships.each do |friendship| %>
+    <%# Can we clean up the following line somehow? %>
+    <% friend = friendship.user_id == @user.id ? User.find_by(id: friendship.friend_id) : User.find_by(id: friendship.user_id) %>
     <% if friendship.accepted %>
       <li>
         <%= link_to "#{friend.name}", user_url(friend) %>
