Create flash message for custom_split calculator

--- a/app/views/custom_splits/new.html.erb
+++ b/app/views/custom_splits/new.html.erb
@@ -1,3 +1,5 @@
 <h1>Create a custom split</h1>
 
+<%= render 'shared/errors' %>
+
 <%= render 'form', group: @group, balances: @balances, action: :new %>
