--- a/app/views/custom_splits/_form.html.erb
+++ b/app/views/custom_splits/_form.html.erb
@@ -2,16 +2,16 @@
 
 <h4>Percentages must add up to 100</h4>
 
-<% flash.each do |type, message| %>
-  <div>
-    <%= message %>
-  </div>
-<% end %>
-
 <% if action == :edit %>
   <% action_url = custom_split_url %>
 <% else %>
   <% action_url = custom_splits_url %>
+<% end %>
+
+<% if flash[:message].present? %>
+  <ul>
+    <li><%= flash[:message] %></li>
+  </ul>
 <% end %>
 
 <form action="<%= action_url %>" method="post">
