Create balance_string method for user class and edit custom_split views

--- a/app/views/custom_splits/_form.html.erb
+++ b/app/views/custom_splits/_form.html.erb
@@ -1,5 +1,11 @@
 <h2><%= @group.name %></h2>
 
+<h3>Instructions</h2>
+<p>If your group wants to split the tab unevenly, 
+just enter the percentages that each member will pay and press the button at 
+the bottom of the page to calculate the amount that each member should 
+pay/receive based on how much they have already contributed to the group.</p>
+
 <h4>Percentages must add up to 100</h4>
 
 <% if action == :edit %>
