Create invitations controller and :new view

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -37,3 +37,5 @@
 <%= link_to "Calculate a custom split", new_group_custom_split_url(@group) %>
 <br>
 <%= link_to 'Add a new receipt to this group', new_user_receipt_url(@user) %>
+<br>
+<%= link_to 'Invite a friend to join this group', new_group_invitation_url(@group) %>
