Add button to accept invitation on users show page

--- a/app/views/invitations/new.html.erb
+++ b/app/views/invitations/new.html.erb
@@ -8,6 +8,8 @@
       <%= friend.name %>
       <% if friend.is_member?(@group.id) %>
         (already joined)
+      <% elsif friend.invite_pending?(@group.id) %>
+        Invite sent
       <% else %>
         <%= button_to 'Invite', { action: "create", recipient_id: friend.id } %>
       <% end %>
