Remove friend request button from friend search where users are already friends

--- a/app/views/friendships/new.html.erb
+++ b/app/views/friendships/new.html.erb
@@ -14,7 +14,9 @@
   <% if @potential_friends %>
     <% @potential_friends.each do |pf| %>
       <li><%= pf.name %></li>
-      <%= button_to "Send friend request", { action: "create", friend_id: pf.id } %>
+      <% if !current_user.friend?(pf.id) %>
+        <%= button_to "Send friend request", { action: "create", friend_id: pf.id } %>
+      <% end %>
     <% end %>
   <% end %>
 </ul>
