--- a/app/assets/stylesheets/config/_variables.css
+++ b/app/assets/stylesheets/config/_variables.css
@@ -1,6 +1,6 @@
 :root {
 
-  --color-background: #EBF5FF;
+  --color-background: #faf5e4;
 
   --font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
@@ -16,8 +16,8 @@
   --font-size-xxxl: 2rem;
   --font-size-xxxxl: 2.5rem;
 
-  --color-text-header: ;
-  --color-text-body: ;
+  --color-text-header: hsl(0, 1%, 16%);
+  --color-text-body: hsl(0, 5%, 25%);
 
   --space-xxxs: 0.25rem;
   --space-xxs: 0.375rem;
@@ -30,9 +30,9 @@
   --space-xxxl: 3rem;
   --space-xxxxl: 4rem;
 
-  --color-primary: ;
-  --color-secondary: ;
-  --color-tertiary: ;
+  --color-primary: #f8b400;
+  --color-secondary: #2c786c;
+  --color-tertiary: #004445;
 
   --border-radius: 0.375rem;
 
